--- a/plugfest-1-2022/participants.html
+++ b/plugfest-1-2022/participants.html
@@ -9,29 +9,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JFF VC-EDU Plugfest #1 | Participants List</title>
-    <meta name="author" content="U.S. Department of Education" />
-     <meta name="description"
-        content="List of Participants in the JFF W3C VC-EDU Verififable Credentials Plugfest June 2022">
+     <meta name="description" content="List of Participants in the JFF W3C VC-EDU Verififable Credentials Plugfest June 2022">
     <meta name="keywords" content="verifiable credentials, decentralized identity, DID, learner records, interoperability" />
-    <meta name="theme-color" content="#ffffff">
-
-    <link rel="stylesheet" href="assets/css/site.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/skeleton.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/rotator.css" />
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,800" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-    <script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
-    <link href="assets/datatables/DataTables-1.10.20/css/dataTables.bootstrap.css" rel="stylesheet">
-     <link href="assets/datatables/datatables.css" rel="stylesheet">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script type="text/javascript" src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script type="text/javascript" src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -44,61 +23,40 @@
           </section>
         </main>
      </section>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="assets/datatables/DataTables-1.10.20/js/dataTables.bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.csv.min.js"></script>
-    <script type="text/javascript" src="assets/datatables/datatables.min.js"></script>
-    <script type="text/javascript" src="assets/datatables/DataTables-1.10.20/js/dataTables.bootstrap.js"></script>
-    <script type="text/javascript" src="assets/js/csv_to_html_table.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-
-
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery.csv.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <script src="js/csv_to_html_table.js"></script>
+    
     <script type="text/javascript">
-        function format_link(csvData){
-            if (csvData) {
-                return "<a href='" + csvData[1] + "' target='_blank'>" + csvData[1] + "</a>";
-            }
-            else {
-                return "";
-            }
+        function format_link(link) {
+            if (link)
+                return "<a href='" + link + "' target='_blank'>" + link + "</a>";
+            else return "";
         }
 
-        function format_desc_hover(csvData, rowIdx){
-            if (csvData[6]) {
-                console.log("csvData "+JSON.stringify(csvData));
-                var content = '<div id="ex' + rowIdx +'" class="modal">'+
-                    '<h4>' + csvData[0] + '</h4>' +
-                    '<p>' + csvData[4] + ', ' + csvData[5] + '</p>' +
-                    '<p><strong>Organization Type:</strong> ' + csvData[6] + '</p>' +
-                    '<p><strong>Technologies:</strong> ' + csvData[7] + '</p>';
-
-                    if (csvData[9]) {
-                        content += '<p><strong>Description:</strong> ' + csvData[9] + '</p>';
-                    }
-                    content += '</div>'+
-                    '<a href="#ex' + rowIdx +'" rel="modal:open">' + csvData[0] + '</a>';
-                return content;
-            } else {
-                return csvData[0];
-            }
-        }
-
-      CsvToHtmlTable.init({
-        csv_path: 'participants-list.csv',
-        element: 'table-container', 
-        allow_download: true,
-        csv_options: {separator: ',', delimiter: '"'},
-        datatables_options: {"paging": false},
-        custom_formatting: [[0, format_desc_hover,[4,5,6,7,9,10,11]],[1, format_link]],
-        custom_multi_cols: [[0, [4,5,6,7,9,10,11]]]
-      });
+        CsvToHtmlTable.init({
+            csv_path: "participants-list.csv",
+            element: "table-container",
+            allow_download: true,
+            csv_options: {
+                separator: ",",
+                delimiter: '"'
+            },
+            datatables_options: {
+                paging: false
+            },
+            custom_formatting: [
+                [1, format_link],
+                [2, format_link]
+            ]
+        });
 
     </script>
-    </section>
+
 
   </body>
 </html>
