--- a/plugfest-1-2022/participants.html
+++ b/plugfest-1-2022/participants.html
@@ -11,18 +11,21 @@
     <title>JFF VC-EDU Plugfest #1 | Participants List</title>
      <meta name="description" content="List of Participants in the JFF W3C VC-EDU Verififable Credentials Plugfest June 2022">
     <meta name="keywords" content="verifiable credentials, decentralized identity, DID, learner records, interoperability" />
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
   </head>
-
   <body>
-    <section id="content" class="content">
-        <main role="main">
-          <section class="intro subpage-intro">
-            <h1>JFF VC-EDU Plugfest #1 - June 2022</h1>
-            <h2>Participants List</h2>
-              <div id='table-container'></div>
-          </section>
+    <div class="container-fluid">
+        <main class="row">
+            <div class="col">
+                <h1>JFF VC-EDU Plugfest #1 - June 2022</h1>
+              <h2>Participants List</h2>
+                <div id="table-container"></div>
+            </div>
         </main>
-     </section>
+    </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
