--- a/plugfest-1-2022/participants.html
+++ b/plugfest-1-2022/participants.html
@@ -15,9 +15,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="/vc-ed/assets/css/style.css?v=ecc7e229f4f7dc138d4efe6b5c4e392d1d71b47d">
   </head>
   <body>
     <div class="container-fluid">
+      <header>
+        <h1><a href="https://w3c-ccg.github.io/vc-ed/">vc-ed</a></h1>
+      </header>
         <main class="row">
             <div class="col">
                 <h2>JFF VC-EDU Plugfest #1 - June 2022</h2>
