--- a/plugfest-1-2022/participants.html
+++ b/plugfest-1-2022/participants.html
@@ -19,13 +19,15 @@
   </head>
   <body>
     <div class="container-fluid">
+       <main class="row">
+          <div class="col">
+            <h1><a href="https://w3c-ccg.github.io/vc-ed/">vc-ed</a></h1>
+         </div>
+      </main>
         <main class="row">
             <div class="col">
-              <header>
-                <h1><a href="https://w3c-ccg.github.io/vc-ed/">vc-ed</a></h1>
                 <h2>JFF VC-EDU Plugfest #1 - June 2022</h2>
                 <h3>Participants List</h3>
-              </header>
               <div id="table-container"></div>
            </div>
         </main>
