Adding status of document section

--- a/charter/index.html
+++ b/charter/index.html
@@ -129,6 +129,9 @@ The Verifiable Credentials for Education Task Force will explore the use of Veri
       </p>
     </section>
 
+    <section id='sotd'>
+    </section>
+
     <section id="history">
       <h2>History</h2>
       <p>
