Adding Matthias as editor

--- a/charter/index.html
+++ b/charter/index.html
@@ -52,7 +52,8 @@
         editors: [
           { name: "Deborah Everhart", url: "https://www.linkedin.com/in/deboraheverhart/",company: "Credential Engine", companyURL: "https://credentialengine.org/"},
           { name: "Simone Ravaioli", url: "https://www.linkedin.com/in/simoneravaioli",company: "Parchment", companyURL: "https://www.parchment.com/"},
-          { name: "Phillip Long", url: "https://www.linkedin.com/in/longpd/",company: "RHz Consulting", companyURL: "https://www.linkedin.com/in/longpd/"}
+          { name: "Phillip Long", url: "https://www.linkedin.com/in/longpd/",company: "RHz Consulting", companyURL: "https://www.linkedin.com/in/longpd/"},
+          { name: "Matthias Gottlieb", url: "https://www.linkedin.com/in/matthias-gottlieb/",company: "Technical University of Munich (TUM)", companyURL: "https://www.tum.de/en/"}
         ],
         // authors, add as many as you like.
         // This is optional, uncomment if you have authors as well as editors.
