plugfest3: update participant video links

--- a/plugfest-3-2023/participants.html
+++ b/plugfest-3-2023/participants.html
@@ -80,7 +80,8 @@
                 paging: false
             },
             custom_formatting: [
-                [3, format_link]
+                [3, format_link],
+                [4, format_link]
             ]
         });
 
